# canicrossy

./: .gitignore  README.md  gui.py  manage.py  pyproject.toml  start-app.py
canicrossy/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
canicrossy/migrations/: 0001_initial.py  0002_athlete_dog_race_alter_athlete_dog_name.py  0002_initial.py  0003_rename_name_athlete_last_name_athlete_first_name.py  0004_athlete_dog_ident_alter_athlete_birth_date.py  0005_alter_athlete_birth_date_alter_athlete_dog_race_and_more.py  0006_alter_participant_race_number_alter_participant_time.py  0007_dog_remove_athlete_dog_ident_remove_athlete_dog_name_and_more.py  0008_alter_participant_options_alter_participant_dog.py  0009_alter_participant_delay_alter_participant_time.py  0010_event_remove_dog_race_remove_race_categories_and_more.py  0011_alter_event_options_alter_race_options_and_more.py  0012_alter_race_options.py  0013_race_categories.py  0014_alter_athlete_federation_alter_athlete_license.py  0015_alter_athlete_birth_date.py
canicrossy/templates/admin/canicrossy/event/: detail.html  detail_.html
canicrossy/templates/admin/canicrossy/race/: detail.html
